Fixed the z-index for cards

--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -24,7 +24,7 @@
   .card.hovered {
     transform: scale(1.1, 1.1);
     transition: transform .3s;
-    z-index: 2;
+    z-index: 3;
 
     // Add color overlay to hovered card
     &:before {
