--- a/assets/scss/components/_hamburger.scss
+++ b/assets/scss/components/_hamburger.scss
@@ -1,5 +1,5 @@
 a{
-  z-index:9;
+  z-index:2;
 
   .hamburger__logo{
     max-width: 35vw;
@@ -15,7 +15,7 @@ a{
 .hamburger {
   padding: 10px 0 10px 10px;
   outline: none;
-  z-index: 30;
+  z-index: 3;
   cursor: pointer;
 
   
