--- a/assets/scss/components/_main-menu-mobile.scss
+++ b/assets/scss/components/_main-menu-mobile.scss
@@ -25,7 +25,7 @@ $button-width: 35px;
     opacity: 0.9;
     display: flex;
     height: 100%;
-    z-index: 20;
+    z-index: 2;
 
     li {
       animation: fadeInRight 0.5s ease forwards;
